--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
   </head>
 
   <body>
+    <script src="scripts/script.js"></script>
     <div id="html2canvas"></div>
     <app-root></app-root>
   </body>
